# Ringmaster

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  ringmaster.example.yaml  ringmaster.service  sitemap.xml
.github/workflows/: docs.yml
architecture/overview/: index.html
docs/: index.md  quickstart.md
docs/Anny/: installation.md
docs/architecture/: overview.md
docs/guide/: configuration.md  installation.md  sessions.md  tasks.md
docs/plans/: 2026-03-29-ringmaster-server-cli.md
docs/reference/: api.md  cli.md  config.md
docs/specs/: 2026-03-29-ringmaster-design.md
guide/configuration/: index.html
guide/installation/: index.html
guide/sessions/: index.html
guide/tasks/: index.html
plans/2026-03-29-ringmaster-server-cli/: index.html
quickstart/: index.html
reference/api/: index.html
reference/cli/: index.html
reference/config/: index.html
ringmaster/: __init__.py  config.py  db.py  models.py  ollama.py  scheduler.py  webhooks.py  worker.py
ringmaster/cli/: __init__.py  main.py
ringmaster/gpu/: __init__.py  detect.py  (+1 more)
search/: search_index.json
tests/: conftest.py  test_auth.py  test_cli.py  test_concurrency.py  test_config.py  test_db.py  test_gpu_detect.py  test_gpu_fingerprint.py  test_models.py  test_notifications_desktop.py  test_notifications_ha.py  test_ollama.py  test_power_actions.py  test_power_inhibitor.py  test_power_presence.py  test_routes_auth.py  test_routes_queue.py  test_routes_sessions.py  test_routes_status.py  test_routes_tasks.py  test_scheduler.py  test_webhooks.py  test_worker.py
(+27 files in other folders)
